[BUGFIX] Close Preview button is not visible on a shortcut page
Reviewed-on: https://review.typo3.org/22003
Tested-by: Tim Kandel
Tested-by: Berit Hlubek
Tested-by: Mattias Nilsson
Original-Commit-Hash: fbb994deb4e2ab95c5f43e068bba1e31be0e4336

--- a/TYPO3.Neos/Resources/Private/Styles/_Global.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/_Global.scss
@@ -105,6 +105,7 @@ body {
 			top: $defaultMargin;
 			right: $defaultMargin;
 			@include box-shadow(0 0 $relatedMargin rgba(0, 0, 0, .25));
+			z-index: 9999;
 
 			.neos-button {
 				width: $unit;
